# kevin-yuying-313lcd-mvp

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  config.h  idf_component.yml  main.cc  pin_config.h
main/audio/: dummy_audio_codec.h
main/backlight/: backlight.cc  backlight.h
main/board/: board.cc  board.h  kevin_yuying_313lcd.cc
main/display/: display.cc  display.h  lcd_display.cc  lcd_display.h
